vbnc/vbnc/vbnc/tests/Errors/30225-2.vb
Option Compare Text
Option Compare Text